[package]
name = "on-the-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-compression = {version = "0.3.15", features = ["tokio", "zstd"]}
chrono = "0.4.23"
clap = {version = "4.1.3", features = ["derive"]}
nix = "0.26.1"
tokio = {version = "1.25.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt"]}
tokio-pipe = "0.2.12"
